<resources>
    <string name="app_name">FinanceManager</string>
    <string name="title_activity_sandwitch">sandwitch</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_balance">balance</string>
    <string name="Adex">Add Expense</string>
    <string name="dash">-</string>
    <string name="space" />
    <string name="load">Load</string>
    <string name="save">Save</string>
    <string name="db_drop">DROP TABLE IF EXISTS</string>
    <string name="title_edit_text_hint">Enter the amount</string>
    <string name="content_edit_text_hint">Write Description of Purchase</string>
    <string name="saved_data">Saved Data</string>

</resources>
