<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.andriod.financemanager.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_data_analysis"
        android:name="com.example.andriod.financemanager.ui.dataanalysis.dataAnalysisFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_data_analysis" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.andriod.financemanager.ui.share.ShareFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_about"
        android:name="com.example.andriod.financemanager.ui.about.aboutFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/saved_data"
        android:name="com.example.andriod.financemanager.view.DisplayNoteActivity"
        android:label="History"
        tools:layout="@layout/activity_display_notee"/>

</navigation>